# mijia-homie

./: .editorconfig  .gitignore  Cargo.toml  Cross.toml  LICENSE  LICENSE-MIT  README.md  generate-configs.py  install-rpi.sh  mijia-homie.service  package.sh  publish-mqtt.service  pyproject.toml  run.sh
.cargo/: config  config.toml
.github/workflows/: lint.yml  package.yml  release.yml  rust.yml
applehat/: Cargo.toml  README.md  applehat.example.toml
applehat/debian-scripts/: applehat.service
applehat/src/: config.rs  main.rs  ui.rs
bluez-async/: CHANGELOG.md  Cargo.toml  README.md
bluez-async/examples/: adapters.rs  characteristics.rs  devices.rs  events.rs  ruuvitag.rs
bluez-async/src/: adapter.rs  characteristic.rs  descriptor.rs  device.rs  events.rs  lib.rs  macaddress.rs  messagestream.rs  service.rs
bluez-generated/: Cargo.toml  README.md  introspect.sh  mod.rs
bluez-generated/specs/: org.bluez.Adapter1.xml  org.bluez.Battery1.xml  org.bluez.Device1.xml  org.bluez.GattCharacteristic1.xml  org.bluez.GattService1.xml  org.bluez.HealthManager1.xml  org.bluez.Media1.xml  org.bluez.ProfileManager1.xml  org.freedesktop.DBus.Introspectable.xml  org.freedesktop.DBus.ObjectManager.xml
bluez-generated/src/: adapter1.rs  agentmanager1.rs  battery1.rs  bluetooth_event.rs  device1.rs  gattcharacteristic1.rs  gattdescriptor1.rs  gattmanager1.rs  gattservice1.rs  healthmanager1.rs  leadvertisingmanager1.rs  lib.rs  media1.rs  networkserver1.rs  profilemanager1.rs
btsensor/: CHANGELOG.md  Cargo.toml  README.md
btsensor/examples/: scan.rs
btsensor/src/: atc.rs  bthome.rs  lib.rs
btsensor/src/bthome/: events.rs  v1.rs  v2.rs
btsensor/src/bthome/v1/: events.rs
doc/presentation/: 2020-10-16-binary-solo-presentation.md  index.html  single-threaded-async.excalidraw  single-threaded-mutex-final.excalidraw  single-threaded-mutex.excalidraw  slides.md  system-overview-future.excalidraw  system-overview.excalidraw
docker/: Dockerfile.buster-gst-aarch64-unknown-linux-gnu  Dockerfile.buster-gst-armv7-unknown-linux-gnueabihf  Dockerfile.buster-gst-x86_64-unknown-linux-gnu  Dockerfile.dbus.aarch64-unknown-linux-gnu  Dockerfile.dbus.armv7-unknown-linux-gnu  Dockerfile.dbus.x86_64-unknown-linux-gnu  Dockerfile.debian-buster-aarch64  Dockerfile.debian-buster-armv6  Dockerfile.debian-buster-armv7  Dockerfile.debian-buster-x86_64  Dockerfile.debian-trixie-aarch64  Dockerfile.debian-trixie-armv6  Dockerfile.debian-trixie-armv7  Dockerfile.debian-trixie-x86_64  cargo-deb.sh  update.sh
docs/: Makefile  releasing.md  setup-system-overview.excalidraw
docs/presentation/: cloudbbq-system-overview.excalidraw  single-threaded-async.excalidraw  single-threaded-blocking.excalidraw  single-threaded-mutex-final.excalidraw  single-threaded-mutex.excalidraw  slides.md  system-overview.excalidraw  will-system-overview.excalidraw
homie/: Cargo.toml
homie-controller/: CHANGELOG.md  Cargo.toml  README.md
homie-controller/examples/: discover.rs  flash.rs
homie-controller/src/: lib.rs  types.rs  values.rs
homie-controller/tests/: integration.rs
homie-device/: CHANGELOG.md  Cargo.toml  README.md
homie-device/examples/: lifecycle.rs  light.rs  sensor.rs
homie-device/src/: lib.rs  types.rs  values.rs
homie-influx/: .env.example  CHANGELOG.md  Cargo.toml  README.md  homie-influx.example.toml  mappings.conf.example  mappings.example.toml
homie-influx/debian-scripts/: homie-influx.service  postinst
homie-influx/src/: config.rs  influx.rs  main.rs
homie/examples/: lifecycle.rs  light.rs  sensor.rs
homie/src/: lib.rs
mijia/: CHANGELOG.md  Cargo.toml  README.md
mijia-homie/: CHANGELOG.md  Cargo.toml  README.md  mijia-history-influx.example.toml  mijia-homie.example.toml  mijia_homie.example.toml
mijia-homie/debian-scripts/: mijia-homie.service  postinst  postrm
mijia-homie/src/: config.rs  main.rs  mijia-history-influx.rs  mijia-names.rs  mijia_history_config.rs
mijia/examples/: characteristics.rs  events.rs  fix-clock.rs  list-sensors.rs  names.rs  properties.rs  readings.rs
mijia/src/: bluetooth.rs  bluetooth_event.rs  dbus_session.rs  decode.rs  lib.rs  session.rs  signed_duration.rs
mijia/src/bluetooth/: bleuuid.rs  events.rs  introspect.rs  messagestream.rs  mod.rs  properties.rs
mijia/src/decode/: comfort_level.rs  history.rs  mod.rs  readings.rs  temperature_unit.rs  time.rs
notebooks/: README.md  data_exploration.ipynb  pyproject.toml
publish-mqtt/: .env.example  Cargo.toml
publish-mqtt/debian-scripts/: postinst  postrm  publish-mqtt.service
publish-mqtt/src/: homie.rs  main.rs
read-all-devices/: Cargo.toml
read-all-devices/src/: explore_device.rs  main.rs
src/: main.rs
