[package]
name = "applehat"
version = "0.1.0"
authors = ["Andrew Walbran <qwandor@google.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Service to use a Rainbow HAT on a Raspberry Pi to show sensor data from Homie."
repository = "https://github.com/alsuren/mijia-homie/"
keywords = ["homie", "mqtt", "raspberrypi"]
categories = ["network-programming"]

[dependencies]
color-backtrace = "0.6.0"
eyre = "0.6.8"
futures = "0.3.27"
homie-controller = { version = "0.9.0", path = "../homie-controller" }
homie-device = { version = "0.9.0", path = "../homie-device" }
log = "0.4.20"
pretty_env_logger = "0.5.0"
rainbow-hat-rs = "0.2.1"
rumqttc = "0.22.0"
rustls = "0.21.7"
rustls-native-certs = "0.6.3"
serde_derive = "1.0.152"
serde = { version = "1.0.188", features = ["derive"] }
stable-eyre = "0.2.2"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
toml = "0.7.6"

[package.metadata.deb]
# $auto doesn't work because we don't build packages in the same container as we build the binaries.
depends = "libc6"
section = "net"
maintainer-scripts = "debian-scripts"
conf-files = ["/etc/applehat/applehat.toml"]
assets = [
	[
		"target/release/applehat",
		"usr/bin/",
		"755",
	],
	[
		"applehat.example.toml",
		"etc/applehat/applehat.toml",
		"640",
	],
	[
		"README.md",
		"usr/share/doc/applehat/",
		"644",
	],
]

# This section needs to be here even if it's empty, for the systemd integration to work.
[package.metadata.deb.systemd-units]
