[package]
name = "applehat"
version = "0.1.2"
authors = ["Andrew Walbran <qwandor@google.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Service to use a Rainbow HAT on a Raspberry Pi to show sensor data from Homie."
repository = "https://github.com/alsuren/mijia-homie/"
keywords = ["homie", "mqtt", "raspberrypi"]
categories = ["network-programming"]

[dependencies]
color-backtrace = "0.7.1"
eyre = "0.6.12"
futures = "0.3.31"
homie-controller = { version = "0.11.0", path = "../homie-controller" }
log = "0.4.28"
pretty_env_logger = "0.5.0"
rainbow-hat-rs = "0.2.1"
rumqttc = "0.25.0"
rustls = "0.23.32"
rustls-native-certs = "0.8.1"
serde_derive = "1.0.152"
serde = { version = "1.0.228", features = ["derive"] }
stable-eyre = "0.2.2"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
toml = "0.9.8"

[package.metadata.deb]
# $auto doesn't work because we don't build packages in the same container as we build the binaries.
depends = "libc6"
section = "net"
maintainer-scripts = "debian-scripts"
conf-files = ["/etc/applehat/applehat.toml"]
assets = [
	[
		"target/release/applehat",
		"usr/bin/",
		"755",
	],
	[
		"applehat.example.toml",
		"etc/applehat/applehat.toml",
		"640",
	],
	[
		"README.md",
		"usr/share/doc/applehat/",
		"644",
	],
]

# This section needs to be here even if it's empty, for the systemd integration to work.
[package.metadata.deb.systemd-units]
