[package]
name = "homie-controller"
version = "0.8.0"
authors = ["Andrew Walbran <qwandor@google.com>", "David Laban <alsuren@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A library for creating controllers to talk to devices implementing the Homie convention for MQTT."
repository = "https://github.com/alsuren/mijia-homie/"
keywords = ["homie", "mqtt"]
categories = ["network-programming"]

[dependencies]
log = "0.4.20"
rumqttc = "0.22.0"
thiserror = "1.0.44"

[dev-dependencies]
flume = "0.10.14"
futures = "0.3.27"
homie-device = { version = "0.8.0", path = "../homie-device" }
pretty_env_logger = "0.5.0"
rumqttd = "0.13.0"
rumqttlog = "0.9.0"
tokio = { version = "1.31.0", features = ["macros", "rt", "rt-multi-thread", "time"] }
