[package]
name = "homie-controller"
version = "0.9.0"
authors = [
    "Andrew Walbran <qwandor@google.com>",
    "David Laban <alsuren@gmail.com>",
]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A library for creating controllers to talk to devices implementing the Homie convention for MQTT."
repository = "https://github.com/alsuren/mijia-homie/"
keywords = ["homie", "mqtt"]
categories = ["network-programming"]

[dependencies]
log = "0.4.26"
rumqttc = "0.24.0"
thiserror = "2.0.12"

[dev-dependencies]
flume = "0.11.1"
futures = "0.3.31"
homie-device = { version = "0.9.0", path = "../homie-device" }
pretty_env_logger = "0.5.0"
rumqttd = "0.19.0"
rumqttlog = "0.9.0"
tokio = { version = "1.44.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "time",
] }
