[package]
name = "homie-controller"
version = "0.11.0"
authors = [
    "Andrew Walbran <qwandor@google.com>",
    "David Laban <alsuren@gmail.com>",
]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A library for creating controllers to talk to devices implementing the Homie convention for MQTT."
repository = "https://github.com/alsuren/mijia-homie/"
keywords = ["homie", "mqtt"]
categories = ["network-programming"]

[dependencies]
log = "0.4.28"
rumqttc = "0.25.0"
thiserror = "2.0.17"

[dev-dependencies]
flume = "0.11.1"
futures = "0.3.31"
homie-device = { version = "0.11.0", path = "../homie-device" }
pretty_env_logger = "0.5.0"
rumqttd = "0.20.0"
rumqttlog = "0.9.0"
tokio = { version = "1.47.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "time",
] }
