[package]
name = "homie-device"
version = "0.9.0"
authors = [
    "Andrew Walbran <qwandor@google.com>",
    "David Laban <alsuren@gmail.com>",
]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A library for creating devices implementing the Homie convention for MQTT."
repository = "https://github.com/alsuren/mijia-homie/"
keywords = ["homie", "mqtt"]
categories = ["network-programming"]

[dependencies]
flume = "0.11.0"
futures = "0.3.30"
local_ipaddress = "0.1.3"
log = "0.4.22"
mac_address = "1.1.7"
rumqttc = "0.24.0"
tokio = "1.38.1"
thiserror = "1.0.63"

[dev-dependencies]
pretty_env_logger = "0.5.0"
rand = "0.8.5"
tokio = { version = "1.38.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "time",
] }
