[package]
name = "homie-device"
version = "0.11.0"
authors = [
    "Andrew Walbran <qwandor@google.com>",
    "David Laban <alsuren@gmail.com>",
]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A library for creating devices implementing the Homie convention for MQTT."
repository = "https://github.com/alsuren/mijia-homie/"
keywords = ["homie", "mqtt"]
categories = ["network-programming"]

[dependencies]
flume = "0.11.1"
futures = "0.3.31"
local_ipaddress = "0.1.3"
log = "0.4.28"
mac_address = "1.1.8"
rumqttc = "0.25.0"
tokio = "1.48.0"
thiserror = "2.0.17"

[dev-dependencies]
pretty_env_logger = "0.5.0"
rand = "0.9.2"
tokio = { version = "1.48.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "time",
] }
