[package]
name = "homie-influx"
version = "0.2.2"
authors = ["Andrew Walbran <qwandor@google.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Service to connect to an MQTT broker and log properties of devices following the Homie convention to an InfluxDB database."
repository = "https://github.com/alsuren/mijia-homie/"
keywords = ["homie", "mqtt"]
categories = ["network-programming"]

[dependencies]
color-backtrace = "0.5.0"
eyre = "0.6.5"
futures = "0.3.8"
homie-controller = { version = "0.3.0", path = "../homie-controller" }
influx_db_client = { version = "0.5.0", default-features = false, features = ["rustls-tls"] }
log = "0.4.11"
pretty_env_logger = "0.4.0"
rumqttc = "0.4.0"
rustls = "0.19.0"
rustls-native-certs = "0.5.0"
serde_derive = "1.0.118"
serde = "1.0.118"
stable-eyre = "0.2.1"
tokio = "1.0.1"
toml = "0.5.8"
url = { version = "2.2.0", features = ["serde"] }

[package.metadata.deb]
# $auto doesn't work because we don't build packages in the same container as we build the binaries.
depends = "adduser, libc6"
section = "net"
maintainer-scripts = "debian-scripts"
conf-files = ["/etc/homie-influx/homie-influx.toml", "/etc/homie-influx/mappings.toml"]
assets = [
	["target/release/homie-influx", "usr/bin/", "755"],
	["homie-influx.example.toml", "etc/homie-influx/homie-influx.toml", "640"],
	["mappings.example.toml", "etc/homie-influx/mappings.toml", "644"],
	["README.md", "usr/share/doc/homie-influx/", "644"],
]

# This section needs to be here even if it's empty, for the systemd integration to work.
[package.metadata.deb.systemd-units]
