[package]
name = "homie-influx"
version = "0.2.10"
authors = ["Andrew Walbran <qwandor@google.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Service to connect to an MQTT broker and log properties of devices following the Homie convention to an InfluxDB database."
repository = "https://github.com/alsuren/mijia-homie/"
keywords = ["homie", "mqtt"]
categories = ["network-programming"]

[dependencies]
color-backtrace = "0.7.0"
eyre = "0.6.12"
futures = "0.3.31"
homie-controller = { version = "0.10.0", path = "../homie-controller" }
influx_db_client = { version = "0.6.1", default-features = false, features = [
	"rustls-tls",
] }
log = "0.4.27"
pretty_env_logger = "0.5.0"
rumqttc = "0.24.0"
rustls = "0.22.4"
rustls-native-certs = "0.8.1"
serde_derive = "1.0.152"
serde = "1.0.219"
stable-eyre = "0.2.2"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
toml = "0.9.2"
url = { version = "2.5.4", features = ["serde"] }

[package.metadata.deb]
# $auto doesn't work because we don't build packages in the same container as we build the binaries.
depends = "adduser, libc6"
section = "net"
maintainer-scripts = "debian-scripts"
conf-files = [
	"/etc/homie-influx/homie-influx.toml",
	"/etc/homie-influx/mappings.toml",
]
assets = [
	[
		"target/release/homie-influx",
		"usr/bin/",
		"755",
	],
	[
		"homie-influx.example.toml",
		"etc/homie-influx/homie-influx.toml",
		"640",
	],
	[
		"mappings.example.toml",
		"etc/homie-influx/mappings.toml",
		"644",
	],
	[
		"README.md",
		"usr/share/doc/homie-influx/",
		"644",
	],
]

# This section needs to be here even if it's empty, for the systemd integration to work.
[package.metadata.deb.systemd-units]
