[package]
name = "homie"
version = "0.1.0"
authors = ["Andrew Walbran <qwandor@google.com>", "David Laban <alsuren@gmail.com>"]
edition = "2018"

[dependencies]
async-channel = "1.4.2"
futures = "0.3.5"
local_ipaddress = "0.1.3"
log = "0.4.11"
mac_address = "1.0.3"
rumqttc = { git = "https://github.com/bytebeamio/rumqtt" }
tokio = "0.2.22"

[dev-dependencies]
pretty_env_logger = "0.4.0"
rand = "0.7"
