[package]
name = "mijia-homie"
version = "0.2.2"
authors = ["David Laban <alsuren@gmail.com>", "Andrew Walbran <qwandor@google.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Service to connect to Xiaomi Mijia 2 temperature/humidity sensors over Bluetooth and report their readings to an MQTT broker following the Homie convention."
repository = "https://github.com/alsuren/mijia-homie/"
keywords = ["ble", "bluetooth", "homie", "mqtt"]
categories = ["network-programming"]

[dependencies]
backoff = { version = "0.2.1", features = ["tokio"] }
color-backtrace = "0.5.0"
eyre = "0.6.5"
futures = "0.3.8"
futures-channel = "0.3.8"
homie-device = { version = "0.4.0", path = "../homie-device" }
itertools = "0.10.0"
log = "0.4.11"
mijia = { version = "0.3.1", path = "../mijia" }
pretty_env_logger = "0.4.0"
rumqttc = "0.4.0"
rustls = "0.19.0"
rustls-native-certs = "0.5.0"
serde_derive = "1.0.118"
serde = "1.0.118"
stable-eyre = "0.2.1"
tokio = { version = "1.0.1", features = ["macros", "rt-multi-thread"] }
tokio-compat-02 = "0.2.0"
toml = "0.5.8"

[package.metadata.deb]
# $auto doesn't work because we don't build packages in the same container as we build the binaries.
depends = "adduser, bluez, libc6, libsystemd0, libgcrypt20, libdbus-1-3, libgpg-error0, liblzma5, liblz4-1"
section = "net"
maintainer-scripts = "debian-scripts"
conf-files = ["/etc/mijia-homie/mijia-homie.toml"]
assets = [
	["target/release/mijia-homie", "usr/bin/", "755"],
	["mijia-homie.example.toml", "etc/mijia-homie/mijia-homie.toml", "640"],
	["README.md", "usr/share/doc/mijia-homie/", "644"],
]

# This section needs to be here even if it's empty, for the systemd integration to work.
[package.metadata.deb.systemd-units]
