[package]
name = "mijia-homie"
version = "0.2.5"
authors = ["David Laban <alsuren@gmail.com>", "Andrew Walbran <qwandor@google.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Service to connect to Xiaomi Mijia 2 temperature/humidity sensors over Bluetooth and report their readings to an MQTT broker following the Homie convention."
repository = "https://github.com/alsuren/mijia-homie/"
keywords = ["ble", "bluetooth", "homie", "mqtt"]
categories = ["network-programming"]
default-run = "mijia-homie"

[[bin]]
name = "mijia-homie"
path = "src/main.rs"

[[bin]]
name = "mijia-history-influx"
path = "src/mijia-history-influx.rs"

[[bin]]
name = "mijia-names"
path = "src/mijia-names.rs"

[dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
color-backtrace = "0.5.1"
eyre = "0.6.8"
futures = "0.3.24"
futures-channel = "0.3.24"
homie-device = { version = "0.7.0", path = "../homie-device" }
influx_db_client = { version = "0.5.1", default-features = false, features = ["rustls-tls"] }
itertools = "0.10.4"
log = "0.4.17"
mijia = { version = "0.6.0", path = "../mijia" }
pretty_env_logger = "0.4.0"
rumqttc = "0.15.0"
rustls = "0.20.6"
rustls-native-certs = "0.6.2"
serde_derive = "1.0.137"
serde = "1.0.144"
stable-eyre = "0.2.2"
tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread"] }
toml = "0.5.9"
url = { version = "2.2.2", features = ["serde"] }

[package.metadata.deb]
# $auto doesn't work because we don't build packages in the same container as we build the binaries.
depends = "adduser, bluez, libc6, libsystemd0, libgcrypt20, libdbus-1-3, libgpg-error0, liblzma5, liblz4-1"
section = "net"
maintainer-scripts = "debian-scripts"
conf-files = ["/etc/mijia-homie/mijia-homie.toml"]
assets = [
	["target/release/mijia-history-influx", "usr/bin/", "755"],
	["target/release/mijia-homie", "usr/bin/", "755"],
	["target/release/mijia-names", "usr/bin/", "755"],
	["mijia-homie.example.toml", "etc/mijia-homie/mijia-homie.toml", "640"],
	["mijia-history-influx.example.toml", "etc/mijia-homie/mijia-history-influx.toml", "640"],
	["README.md", "usr/share/doc/mijia-homie/", "644"],
]

# This section needs to be here even if it's empty, for the systemd integration to work.
[package.metadata.deb.systemd-units]
