[package]
name = "mijia-homie"
version = "0.2.7"
authors = [
	"David Laban <alsuren@gmail.com>",
	"Andrew Walbran <qwandor@google.com>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Service to connect to Xiaomi Mijia 2 temperature/humidity sensors over Bluetooth and report their readings to an MQTT broker following the Homie convention."
repository = "https://github.com/alsuren/mijia-homie/"
keywords = ["ble", "bluetooth", "homie", "mqtt"]
categories = ["network-programming"]
default-run = "mijia-homie"

[[bin]]
name = "mijia-homie"
path = "src/main.rs"

[[bin]]
name = "mijia-history-influx"
path = "src/mijia-history-influx.rs"

[[bin]]
name = "mijia-names"
path = "src/mijia-names.rs"

[dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
btsensor = { version = "0.1.0", path = "../btsensor" }
color-backtrace = "0.7.0"
eyre = "0.6.12"
futures = "0.3.31"
futures-channel = "0.3.31"
homie-device = { version = "0.9.0", path = "../homie-device" }
influx_db_client = { version = "0.6.1", default-features = false, features = [
	"rustls-tls",
] }
itertools = "0.14.0"
log = "0.4.27"
mijia = { version = "0.7.1", path = "../mijia" }
pretty_env_logger = "0.5.0"
rumqttc = "0.24.0"
rustls = "0.22.2"
rustls-native-certs = "0.8.1"
serde_derive = "1.0.152"
serde = "1.0.219"
stable-eyre = "0.2.2"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.23"
url = { version = "2.5.4", features = ["serde"] }

[package.metadata.deb]
# $auto doesn't work because we don't build packages in the same container as we build the binaries.
depends = "adduser, bluez, libc6, libsystemd0, libgcrypt20, libdbus-1-3, libgpg-error0, liblzma5, liblz4-1"
section = "net"
maintainer-scripts = "debian-scripts"
conf-files = ["/etc/mijia-homie/mijia-homie.toml"]
assets = [
	[
		"target/release/mijia-history-influx",
		"usr/bin/",
		"755",
	],
	[
		"target/release/mijia-homie",
		"usr/bin/",
		"755",
	],
	[
		"target/release/mijia-names",
		"usr/bin/",
		"755",
	],
	[
		"mijia-homie.example.toml",
		"etc/mijia-homie/mijia-homie.toml",
		"640",
	],
	[
		"mijia-history-influx.example.toml",
		"etc/mijia-homie/mijia-history-influx.toml",
		"640",
	],
	[
		"README.md",
		"usr/share/doc/mijia-homie/",
		"644",
	],
]

# This section needs to be here even if it's empty, for the systemd integration to work.
[package.metadata.deb.systemd-units]
