[package]
name = "mijia"
version = "0.7.1"
authors = [
    "Luis Félix <lcs.felix@gmail.com>",
    "Andrew Walbran <qwandor@google.com>",
    "David Laban <alsuren@gmail.com>",
]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A library for connecting to Xiaomi Mijia 2 Bluetooth temperature/humidity sensors."
repository = "https://github.com/alsuren/mijia-homie/"
keywords = ["ble", "bluetooth", "humidity", "temperature"]
categories = ["hardware-support"]

[dependencies]
bluez-async = "0.7.1"
futures = "0.3.30"
log = "0.4.21"
thiserror = "1.0.58"
tokio = "1.36.0"
tokio-stream = "0.1.15"
uuid = "1.8.0"

[dev-dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
chrono = "0.4.35"
eyre = "0.6.12"
pretty_env_logger = "0.5.0"
tokio = { version = "1.36.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "time",
] }
