[package]
name = "mijia"
version = "0.8.0"
authors = [
    "Luis Félix <lcs.felix@gmail.com>",
    "Andrew Walbran <qwandor@google.com>",
    "David Laban <alsuren@gmail.com>",
]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A library for connecting to Xiaomi Mijia 2 Bluetooth temperature/humidity sensors."
repository = "https://github.com/alsuren/mijia-homie/"
keywords = ["ble", "bluetooth", "humidity", "temperature"]
categories = ["hardware-support"]

[dependencies]
bluez-async = "0.8.2"
futures = "0.3.32"
log = "0.4.29"
thiserror = "2.0.18"
tokio = "1.49.0"
tokio-stream = "0.1.18"
uuid = "1.21.0"

[dev-dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
chrono = "0.4.43"
eyre = "0.6.12"
pretty_env_logger = "0.5.0"
tokio = { version = "1.49.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "time",
] }
