[package]
name = "publish-mqtt"
version = "0.1.0"
authors = ["David Laban <alsuren@gmail.com>"]
edition = "2018"

[dependencies]
blurz = "0.4.0"
color-backtrace = "0.4.2"
dbus = "0.6.3"
futures = "0.3"
homie = { path = "../homie" }
log = "0.4"
mijia = { path = "../mijia" }
pretty_env_logger = "0.4.0"
rumqttc = "0.0.6"
rustls = "0.17"
rustls-native-certs = "0.3"
tokio = "0.2.22"
dotenv = "0.15.0"
