[package]
name = "publish-mqtt"
version = "0.1.0"
authors = ["David Laban <alsuren@gmail.com>", "Andrew Walbran <qwandor@google.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alsuren/mijia-homie/"

[dependencies]
backoff = { version = "0.2.1", features = ["tokio"] }
color-backtrace = "0.4.2"
eyre = "0.6"
dotenv = "0.15.0"
futures = "0.3.5"
futures-channel = "0.3.5"
homie-device = { path = "../homie-device" }
itertools = "0.9.0"
log = "0.4.11"
mijia = { path = "../mijia" }
pretty_env_logger = "0.4.0"
rumqttc = "0.1.1"
rustls = "0.18.1"
rustls-native-certs = "0.4.0"
tokio = "0.2.22"
