[package]
name = "read-all-devices"
version = "0.1.0"
authors = ["Luis Félix <lcs.felix@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.9"


dbus = { version = "0.8.4", features = ["futures"] }
futures = "0.3.5"
bluez-generated = { path = "../bluez-generated" }
tokio = "0.2.22"
dbus-tokio = "0.5.2"
mijia = { path = "../mijia" }
itertools = "0.9.0"
